--- a/style.css
+++ b/style.css
@@ -37,9 +37,9 @@ body {
 #menu {
   position: fixed;
   top: 0;
-  right: -360px; /* Initially hidden */
-  width: 360px;
+  right: -100%;
   height: 100vh;
+  width: 360px;
   background-color: #f5f5f5;
   transition: right 0.3s ease-in-out;
   z-index: 9998; /* Set a lower z-index than gear icon */
