--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 40vw;
+  background: #454545;
   font-weight: bold;
   font-family: sans-serif;
   text-align: center;
@@ -8,7 +8,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
-  color: white;
 }
 
 #gear-icon {
@@ -66,12 +65,14 @@ body {
 }
 
 #output {
-  font-size: 70vh; /* adjust this value to your liking */
+  font-size: 80vh; /* adjust this value to your liking */
   margin: 0 auto; /* center the element horizontally */
+  color: #f5f5f5;
 }
 
 #countdown {
   font-size: 3vh;
+  color: #f5f5f5;
 }
 
 .slider-container {
@@ -80,7 +81,6 @@ body {
   align-items: center;
   gap: 20px; /* change this to adjust the spacing */
   margin: 50px 30px 30px 30px; /* top right bottom left */
-
 }
 
 .sliders-wrapper {
@@ -122,3 +122,20 @@ body {
   font-size: 16px;
   color: #333;
 }
+
+
+#color-options label {
+  align-items: center;
+  margin-right: 10px;
+  font-size: 14px;
+  font-color: #000
+  width: auto; /* Adjust the width as desired */
+  height: auto /* Adjust the height as desired */
+  padding: 5px; /* Adjust the padding as desired */
+}
+
+#color-options input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+
