--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 #output {
-  font-size: 80vh; /* adjust this value to your liking */
+  font-size: 70vh; 
   margin: 0 auto; /* center the element horizontally */
   color: #f5f5f5;
 }
